  - SPVM::ShortList->resize added elements are set to 0 always
  - SPVM::IntList->resize added elements are set to 0 always
  - SPVM::LongList->resize added elements are set to 0 always
  - SPVM::FloatList->resize added elements are set to 0 always
  - SPVM::DoubleList->resize added elements are set to 0 always
  - add SPVM::StringList->resize
0.0948 2021-04-28
  - remove SPVM::StringUtil->replace
  - remove SPVM::StringUtil->replace_all
  - remove SPVM::StringUtil->chomp_crlf
  - rename SPVM::StringUtil->chomp_lf to SPVM::StringUtil->chompr
  - rename the following SPVM::StringUtil methods
    isalnum to is_alnum
    isalpha to is_alpha
    isalpha to is_alpha
    iscntrl to is_cntrl
    isdigit to is_digit
    isgraph to is_graph
    islower to is_lower
    isprint to is_print
    isprint to is_print
    ispunct to is_punct
    isspace to is_space
    isupper to is_upper
    isxdigit to is_xdigit
    tolower to to_lower
    toupper to to_upper
    strtoi to to_int_with_base
    strtol to to_long_with_base
    strtof to to_float
    strtod to to_double
  - add SPVM::StringUtil->to_int
  - add SPVM::StringUtil->to_long
  - remove SPVM::ByteList->new_capacity
  - remove SPVM::ShortList->new_capacity
  - remove SPVM::IntList->new_capacity
  - remove SPVM::LongList->new_capacity
  - remove SPVM::FloatList->new_capacity
  - remove SPVM::DoubleList->new_capacity
  - remove SPVM::StringList->new_capacity
  - remove SPVM::List->new_capacity
  - remove SPVM::List->splice
  - remove SPVM::ByteList->capacity
  - remove SPVM::ShortList->capacity
  - remove SPVM::IntList->capacity
  - remove SPVM::LongList->capacity
  - remove SPVM::FloatList->capacity
  - remove SPVM::DoubleList->capacity
  - remove SPVM::StringList->capacity
  - remove SPVM::List->capacity
  - remove SPVM::ByteList->values
  - remove SPVM::ShortList->values
  - remove SPVM::IntList->values
  - remove SPVM::LongList->values
  - remove SPVM::FloatList->values
  - remove SPVM::DoubleList->values