@@ -18,24 +18,11 @@ SPVM::StringBuffer - String buffer
   $buffer->push("def");
   
   # Convert to string - abcdef
-  my $str = $buffer->to_string;
+  my $string = $buffer->to_string;
   
-  # Cat sub string - bcd
-  my $offset = 1;
-  my $length = 3;
-  my $substr = $buffer->substr($offset, $length);
-
-  # Search string
-  my $search = "cd";
-  my $start_pos = 1;
-  my $found_pos = $buffer->index($search, $start_pos);
-  
-  # new with option
-  my $buffer = SPVM::StringBuffer->new_opt([(object)capacity => 256]);
-
 =head1 DESCRIPTION
 
-String buffer. Performance is better than concat operator when many strings is joined.
+String buffer.
 
 =head1 STATIC METHODS
 
@@ -43,21 +30,7 @@ String buffer. Performance is better than concat operator when many strings is j
 
   sub new : SPVM::StringBuffer ()
 
-Create new L<SPVM::StringBuffer> object which capacity is 16 bytes without string 
-
-=head2 new_opt
-
-  sub new_opt : SPVM::StringBuffer ($options : object[])
-
-Create new L<SPVM::StringBuffer> object with options.
-
-=over 2
-
-=item * capacity : SPVM::Int
-
-Capacity of string buffer. Capacity must be more than 0.
-
-=back
+Create new L<SPVM::StringBuffer> object.
 
 =head1 INSTANCE METHODS
 
@@ -65,28 +38,22 @@ Capacity of string buffer. Capacity must be more than 0.
 
   sub length : int ($self : self)
 
-Get string length.
-
-=head2 capacity
-
-  sub capacity : int ($self : self)
-
-Get capacity of string buffer.
+Get the string length.
 
 =head2 push
 
   sub push  : void ($self : self, $string : string)
 
-Push string to string buffer.
+Push a string to the string buffer.
+
+=head2 push_char
+
+  sub push_char : void ($self : self, $char : byte)
+
+Push a character to the string buffer.
 
 =head2 to_string
 
   sub to_string : string ($self : self)
 
-Convert string buffer to string.
-
-=head2 clear
-
-  sub clear : void ($self : self)
-
-Clear string.
+Convert the string buffer to a string.
