@@ -8,8 +8,6 @@ use Test::More 'no_plan';
 
 use SPVM 'TestCase::Lib::SPVM::StringBuffer';
 
-
-
 # Start objects count
 my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
 
